# POC-Pulumi

./: .dockerignore  Dockerfile  Pulumi.yaml  __main__.py  main.py  pyproject.toml
