[project]
name = "test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.8",
    "langchain-ollama>=0.2.3",
    "langchain>=0.3.17",
    "ollama>=0.4.7",
    "uvicorn>=0.34.0",
    "langchain-community>=0.3.16",
    "pulumi>=3",
    "pulumi-aws>=6.13.3",
]
